<resources>
    <string name="app_name">DamkeepApp</string>
    <string name="txt_register">Registrarse</string>
    <string name="txt_login">Iniciar Sesión</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_username">Nombre de usuario</string>
    <string name="txt_fullname">Nombre completo</string>
    <string name="txt_confirm_password">Confirmar contraseña</string>
    <string name="txt_edit">Editar nota</string>
    <string name="txt_do_edit">Editar</string>
    <string name="title_activity_test">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_new_note">añadir nota</string>
    <string name="txt_add_note">Crear Nota</string>
    <string name="txt_content">Contenido</string>
    <string name="txt_title">Titulo</string>
</resources>
